--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     color: white;
     display: flex;
     height: 40px;
-    padding: 20px 40px 20px 20px;
+    padding: 20px 100px;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -12,17 +12,54 @@ a {
     text-decoration: none;
 }
 
- /* .logo { 
-    display: flex;
-    flex: 1;
-        font-family: 'Roboto' sans-serif;
+ .logo { 
+    font-size: 24px;
 
-}  */
+} 
 
 .navbar {
     display: flex;
     flex: 1 1 auto;
     direction: rtl;
     /* justify-content: flex-start; */
-    gap: 10px;
+    gap: 20px;
+}
+
+.hero {
+    background-color: #1F2937;
+    display: flex;
+    color: white;
+    padding: 20px 100px;
+    height: 250px;
+    font-family: 'Roboto', sans-serif;
+    gap: 30px;
+}
+
+.hero-item {
+    flex: 1;
+
+}
+
+h1 {
+    font-size:48px;
+    
+}
+
+button {
+    background-color: #3882F6;
+    color: white;
+    border-radius: 5px;
+    border: 0px;
+    padding: 5px 20px;
+}
+
+.hero-image {
+    background-color: darkgray;
+    display: flex;
+    align-items: center;
+}
+
+.hero-image p {
+    flex: 1;
+    text-align: center;
 }
