--- a/style.css
+++ b/style.css
@@ -65,3 +65,36 @@ button {
     flex: 1;
     text-align: center;
 }
+
+h2 {
+    padding: 20px 100px;
+    font-family: 'Roboto';
+    font-size: 36px;
+    text-align: center;
+}
+
+.info {
+    display: flex;
+    height: 350px;
+    gap: 50px;
+    padding: 20px 100px;
+    justify-content: center;
+}
+
+.info div {
+    flex: 1;
+}
+
+.info-image {
+    height: 150px;
+    /* width: 150px; */
+    border: 5px;
+    border-style:solid;
+    border-color: blue;
+    border-radius: 15px;
+}
+
+.info p {
+    text-align: center;
+    font-family: 'Roboto';
+}
