--- a/style.css
+++ b/style.css
@@ -99,3 +99,22 @@ h2 {
     font-family: 'Roboto';
 }
 
+.quote {
+    height: 300px;
+    background-color: darkgray;
+    font-family: 'Roboto';
+    padding: 50px 300px;
+}
+
+.quote p:first-child {
+    text-align: left;
+    font-size: 36px;
+    font-weight: 200;
+    font-style: italic;
+}
+
+.author {
+    text-align: right;
+    font-weight: 800;
+    font-size: 24px;
+}
